5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1807_2573.log
== TEST (2019-06-10 22:21:05) 
-- CODE:
from numpy import *
peso = array(eval(input("Digite o peso: ")))
h = array(eval(input("Digite a altura: ")))
imc = zeros(size(peso), dtype=float)
for i in peso:
	imc[i] = peso[i]/(altura[i]**2)
print(imc)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:22:29) 
-- CODE:
from numpy import *
peso = array(eval(input("Digite o peso: ")))
h = array(eval(input("Digite a altura: ")))
imc = zeros(size(peso), dtype=float)
for i in peso:
	imc[i] = peso[i]/(altura[i]**2)
print(imc)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:24:14) 
-- CODE:
from numpy import *
peso = array(eval(input("Digite o peso: ")))
h = array(eval(input("Digite a altura: ")))
imc = zeros(size(peso), dtype=float)
for i in peso:
	imc[i] = peso[i]/(altura[i]**0.5)
print(imc)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:25:16) 
-- CODE:
from numpy import *
peso = array(eval(input("Digite o peso: ")))
h = array(eval(input("Digite a altura: ")))
imc = zeros(size(peso), dtype=float)
for i in peso:
	imc[i] = peso[i]/(h[i]*h[i])
print(imc)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:27:18) 
-- CODE:
from numpy import *
peso = array(eval(input("Digite o peso: ")))
h = array(eval(input("Digite a altura: ")))
imc = zeros(size(peso), dtype=float)
for i in peso:
	imc = peso/(h*h)
print(imc)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:37:32) 
-- CODE:
from numpy import *
peso = array(eval(input("Digite o peso: ")))
h = array(eval(input("Digite a altura: ")))
imc = zeros(size(peso), dtype=float)
for i in peso:
	imc = peso/(h*h)
	imc = round(imc, 2) 
	m = max(imc)
		if(m < 17):
			sit = "muito abaixo do peso"
		if(17 <= m <= 18.49):
			sit = "abaixo do peso"	
		if(18.5 <= m <= 24.99):
			sit = "peso normal"
		if(25 <= m <= 29.99):
			sit = "acima do peso"
		if(30 <= m <= 34.99):
			sit = "obesidade"
		if(35 <= m <= 39.99):
			sit = "obesidade severa"
		if(m > 40):
			sit = "peso morbida"	
	print(imc)
	print("O MAIOR IMC DA TURMA EH:", m, sit.upper())
-- ERROR:
File "XXXX", line 9
    if(m < 17):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:38:16) 
-- CODE:
from numpy import *
peso = array(eval(input("Digite o peso: ")))
h = array(eval(input("Digite a altura: ")))
imc = zeros(size(peso), dtype=float)
for i in peso:
	imc = peso/(h*h)
	imc = round(imc, 2) 
	m = max(imc)
		if(m < 17):
			sit = "muito abaixo do peso"
		elif(17 <= m <= 18.49):
			sit = "abaixo do peso"	
		elif(18.5 <= m <= 24.99):
			sit = "peso normal"
		elif(25 <= m <= 29.99):
			sit = "acima do peso"
		elif(30 <= m <= 34.99):
			sit = "obesidade"
		elif(35 <= m <= 39.99):
			sit = "obesidade severa"
		elif(m > 40):
			sit = "peso morbida"	
	print(imc)
	print("O MAIOR IMC DA TURMA EH:", m, sit.upper())
-- ERROR:
File "XXXX", line 9
    if(m < 17):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:39:01) 
-- CODE:
from numpy import *
peso = array(eval(input("Digite o peso: ")))
h = array(eval(input("Digite a altura: ")))
imc = zeros(size(peso), dtype=float)
for i in peso:
	imc = peso/(h*h)
	imc = round(imc, 2) 
	m = max(imc)
	if(m < 17):
		sit = "muito abaixo do peso"
	elif(17 <= m <= 18.49):
		sit = "abaixo do peso"	
	elif(18.5 <= m <= 24.99):
		sit = "peso normal"
	elif(25 <= m <= 29.99):
		sit = "acima do peso"
	elif(30 <= m <= 34.99):
		sit = "obesidade"
	elif(35 <= m <= 39.99):
		sit = "obesidade severa"
	elif(m > 40):
		sit = "peso morbida"	
	print(imc)
	print("O MAIOR IMC DA TURMA EH:", m, sit.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:40:01) 
-- CODE:
from numpy import *
peso = array(eval(input("Digite o peso: ")))
h = array(eval(input("Digite a altura: ")))
imc = zeros(size(peso), dtype=float)
for i in peso:
	imc = peso/(h*h)
	m = max(imc)
	if(m < 17):
		sit = "muito abaixo do peso"
	elif(17 <= m <= 18.49):
		sit = "abaixo do peso"	
	elif(18.5 <= m <= 24.99):
		sit = "peso normal"
	elif(25 <= m <= 29.99):
		sit = "acima do peso"
	elif(30 <= m <= 34.99):
		sit = "obesidade"
	elif(35 <= m <= 39.99):
		sit = "obesidade severa"
	elif(m > 40):
		sit = "peso morbida"	
	print(imc)
	print("O MAIOR IMC DA TURMA EH:", m, sit.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:41:43) 
-- CODE:
from numpy import *
peso = array(eval(input("Digite o peso: ")))
h = array(eval(input("Digite a altura: ")))
imc = zeros(size(peso), dtype=float)
for i in peso:
	imc = peso/(h*h)
	m = max(imc)
	if(m < 17):
		sit = "muito abaixo do peso"
	elif(17 <= m <= 18.49):
		sit = "abaixo do peso"	
	elif(18.5 <= m <= 24.99):
		sit = "peso normal"
	elif(25 <= m <= 29.99):
		sit = "acima do peso"
	elif(30 <= m <= 34.99):
		sit = "obesidade"
	elif(35 <= m <= 39.99):
		sit = "obesidade severa"
	elif(m > 40):
		sit = "peso morbida"	
for i in imc:
	round(i, 2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", m, sit.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:43:58) 
-- CODE:
from numpy import *
peso = array(eval(input("Digite o peso: ")))
h = array(eval(input("Digite a altura: ")))
imc = zeros(size(peso), dtype=float)
for i in peso:
	imc = peso/(h*h)
	m = max(imc)
	if(m < 17):
		sit = "muito abaixo do peso"
	elif(17 <= m <= 18.49):
		sit = "abaixo do peso"	
	elif(18.5 <= m <= 24.99):
		sit = "peso normal"
	elif(25 <= m <= 29.99):
		sit = "acima do peso"
	elif(30 <= m <= 34.99):
		sit = "obesidade"
	elif(35 <= m <= 39.99):
		sit = "obesidade severa"
	elif(m > 40):
		sit = "peso morbida"	
for i in imc:
	imc = round(imc, 2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", m, sit.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:46:21) 
-- CODE:
from numpy import *
peso = array(eval(input("Digite o peso: ")))
h = array(eval(input("Digite a altura: ")))
imc = zeros(size(peso), dtype=float)
for i in peso:
	imc = peso/(h*h)
	m = max(imc)
	if(m < 17):
		sit = "muito abaixo do peso"
	elif(17 <= m <= 18.49):
		sit = "abaixo do peso"	
	elif(18.5 <= m <= 24.99):
		sit = "peso normal"
	elif(25 <= m <= 29.99):
		sit = "acima do peso"
	elif(30 <= m <= 34.99):
		sit = "obesidade"
	elif(35 <= m <= 39.99):
		sit = "obesidade severa"
	elif(m > 40):
		sit = "peso morbida"	
for v in range(size(imc)):
	imc[v] = round(imc[v], 2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", m, sit.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 22:46:50) 
-- CODE:
from numpy import *
peso = array(eval(input("Digite o peso: ")))
h = array(eval(input("Digite a altura: ")))
imc = zeros(size(peso), dtype=float)
for i in peso:
	imc = peso/(h*h)
	m = max(imc)
	if(m < 17):
		sit = "muito abaixo do peso"
	elif(17 <= m <= 18.49):
		sit = "abaixo do peso"	
	elif(18.5 <= m <= 24.99):
		sit = "peso normal"
	elif(25 <= m <= 29.99):
		sit = "acima do peso"
	elif(30 <= m <= 34.99):
		sit = "obesidade"
	elif(35 <= m <= 39.99):
		sit = "obesidade severa"
	elif(m > 40):
		sit = "peso morbida"	
for v in range(size(imc)):
	imc[v] = round(imc[v], 2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", m, sit.upper())
-- EXECUTION TIME:
1.06506
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.607529340039623 PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.443275802877565 ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.792470156106525 OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:47:37) 
-- CODE:
from numpy import *
peso = array(eval(input("Digite o peso: ")))
h = array(eval(input("Digite a altura: ")))
imc = zeros(size(peso), dtype=float)
for i in peso:
	imc = peso/(h*h)
	m = max(imc)
	if(m < 17):
		sit = "muito abaixo do peso"
	elif(17 <= m <= 18.49):
		sit = "abaixo do peso"	
	elif(18.5 <= m <= 24.99):
		sit = "peso normal"
	elif(25 <= m <= 29.99):
		sit = "acima do peso"
	elif(30 <= m <= 34.99):
		sit = "obesidade"
	elif(35 <= m <= 39.99):
		sit = "obesidade severa"
	elif(m > 40):
		sit = "peso morbida"	
for v in range(size(imc)):
	imc[v] = round(imc[v], 2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", m)
print(sit.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 22:48:04) 
-- CODE:
from numpy import *
peso = array(eval(input("Digite o peso: ")))
h = array(eval(input("Digite a altura: ")))
imc = zeros(size(peso), dtype=float)
for i in peso:
	imc = peso/(h*h)
	m = max(imc)
	if(m < 17):
		sit = "muito abaixo do peso"
	elif(17 <= m <= 18.49):
		sit = "abaixo do peso"	
	elif(18.5 <= m <= 24.99):
		sit = "peso normal"
	elif(25 <= m <= 29.99):
		sit = "acima do peso"
	elif(30 <= m <= 34.99):
		sit = "obesidade"
	elif(35 <= m <= 39.99):
		sit = "obesidade severa"
	elif(m > 40):
		sit = "peso morbida"	
for v in range(size(imc)):
	imc[v] = round(imc[v], 2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", m)
print(sit.upper())
-- EXECUTION TIME:
0.803397
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.607529340039623
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.443275802877565
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.792470156106525
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:48:33) 
-- CODE:
from numpy import *
peso = array(eval(input("Digite o peso: ")))
h = array(eval(input("Digite a altura: ")))
imc = zeros(size(peso), dtype=float)
for i in peso:
	imc = peso/(h*h)
	m = max(imc)
	if(m < 17):
		sit = "muito abaixo do peso"
	elif(17 <= m <= 18.49):
		sit = "abaixo do peso"	
	elif(18.5 <= m <= 24.99):
		sit = "peso normal"
	elif(25 <= m <= 29.99):
		sit = "acima do peso"
	elif(30 <= m <= 34.99):
		sit = "obesidade"
	elif(35 <= m <= 39.99):
		sit = "obesidade severa"
	elif(m > 40):
		sit = "peso morbida"	
for v in range(size(imc)):
	imc[v] = round(imc[v], 2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", m)
print(sit.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 22:49:38) 
-- CODE:
from numpy import *
peso = array(eval(input("Digite o peso: ")))
h = array(eval(input("Digite a altura: ")))
imc = zeros(size(peso), dtype=float)
for i in peso:
	imc = peso/(h*h)
	m = max(imc)
	if(m < 17):
		sit = "muito abaixo do peso"
	elif(17 <= m <= 18.49):
		sit = "abaixo do peso"	
	elif(18.5 <= m <= 24.99):
		sit = "peso normal"
	elif(25 <= m <= 29.99):
		sit = "acima do peso"
	elif(30 <= m <= 34.99):
		sit = "obesidade"
	elif(35 <= m <= 39.99):
		sit = "obesidade severa"
	elif(m > 40):
		sit = "peso morbida"	
for v in range(size(imc)):
	imc[v] = round(imc[v], 2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", round(m, 2))
print(sit.upper())
-- EXECUTION TIME:
1.19718
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
Digite o peso: Digite a altura: [37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:49:56) 
-- CODE:
from numpy import *
peso = array(eval(input("Digite o peso: ")))
h = array(eval(input("Digite a altura: ")))
imc = zeros(size(peso), dtype=float)
for i in peso:
	imc = peso/(h*h)
	m = max(imc)
	if(m < 17):
		sit = "muito abaixo do peso"
	elif(17 <= m <= 18.49):
		sit = "abaixo do peso"	
	elif(18.5 <= m <= 24.99):
		sit = "peso normal"
	elif(25 <= m <= 29.99):
		sit = "acima do peso"
	elif(30 <= m <= 34.99):
		sit = "obesidade"
	elif(35 <= m <= 39.99):
		sit = "obesidade severa"
	elif(m > 40):
		sit = "peso morbida"	
for v in range(size(imc)):
	imc[v] = round(imc[v], 2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", round(m, 2))
print(sit.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:52:37) 
-- CODE:
from numpy import *
peso = array(eval(input("Digite o peso: ")))
h = array(eval(input("Digite a altura: ")))
imc = zeros(size(peso), dtype=float)
for i in peso:
	imc = peso/(h*h)
	m = round(max(imc), 2)
	if(m < 17):
		sit = "muito abaixo do peso"
	elif(17 <= m <= 18.49):
		sit = "abaixo do peso"	
	elif(18.5 <= m <= 24.99):
		sit = "peso normal"
	elif(25 <= m <= 29.99):
		sit = "acima do peso"
	elif(30 <= m <= 34.99):
		sit = "obesidade"
	elif(35 <= m <= 39.99):
		sit = "obesidade severa"
	elif(m > 40):
		sit = "peso morbida"	
for v in range(size(imc)):
	imc[v] = round(imc[v], 2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", m)
print(sit.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 22:53:08) 
-- CODE:
from numpy import *
peso = array(eval(input("Digite o peso: ")))
h = array(eval(input("Digite a altura: ")))
imc = zeros(size(peso), dtype=float)
for i in peso:
	imc = peso/(h*h)
	m = round(max(imc), 2)
	if(m < 17):
		sit = "muito abaixo do peso"
	elif(17 <= m <= 18.49):
		sit = "abaixo do peso"	
	elif(18.5 <= m <= 24.99):
		sit = "peso normal"
	elif(25 <= m <= 29.99):
		sit = "acima do peso"
	elif(30 <= m <= 34.99):
		sit = "obesidade"
	elif(35 <= m <= 39.99):
		sit = "obesidade severa"
	elif(m > 40):
		sit = "peso morbida"	
for v in range(size(imc)):
	imc[v] = round(imc[v], 2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", m)
print(sit.upper())
-- EXECUTION TIME:
1.12318
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
